--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React + TS</title>
   </head>
-  <body>
-    <div id="root"></div>
+  <body class="bg-a_general-50">
+    <div class="" id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
