--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React + TS</title>
   </head>
-  <body class="bg-a_general-30 text-a_general-100">
+  <body class="bg-a_general-30 dark:bg-a_general-80 text-a_general-100 dark:text-white">
     <div class="" id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
     <script src="https://unpkg.com/react/umd/react.production.min.js"></script>
